# deuces

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: test.ipynb
scripts/: create_cache.py
slowroll/: __init__.py  card.py  cards.py  deck.py  evaluator.py  hand.py  pokerstove.py
slowroll/cache/joblib/slowroll/pokerstove/evaluate/: func_code.py
slowroll/cache/joblib/slowroll/pokerstove/evaluate/0080c0451c6e83b22b4117e9c328df5f/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/095681f123b6926ed5c4ede7c3df4ed6/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/0a9b95372b6d371992d234bbfbedf810/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/102d0097335a0b0228fca5e270b7c3bb/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/17eb1e18e1a73335cbf1bc193935c54e/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/187514a149a221c0b5501e0ec5590266/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/1aef0700e463170969c062d14b78bbbf/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/1ca824e3d931f0490c41d06e0a12c3f3/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/1f1218ab00fbb577285b1fe2d3eaeed1/: metadata.json  output.pkl
slowroll/cache/joblib/slowroll/pokerstove/evaluate/2160cc249cc86136014c42def1c4857d/: metadata.json  output.pkl
tests/: test_pseval.py  test_readme.py
(+146 files in other folders)
